src/style.css
/* * This is to extend the 3 grids heights */
html,
body,
main {
  min-height: 100vh;
  overflow: hidden;
}

body {
  margin: 0;
  min-height: 100vh;
  background: url("../../assets/Backgrounds/Castle/castle01.jpg") no-repeat
    center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.app-wrapper {
  display: grid;
  grid-template-columns: 30% 40% 30%;
}

/* thunder */
.thunder {
  height: 100vh;
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url("../../assets/effects/thunder.png");
  top: -100px;
  transform: rotate(180deg);
  animation: lightining 2s linear infinite;
  opacity: 1;
  left: 0;
}
@keyframes lightining {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0;
  }
  21% {
    opacity: 0;
  }
  25% {
    opacity: 0;
  }
  30% {
    opacity: 0;
  }
  31% {
    opacity: 1;
  }
  35% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
/* welcome page
 */

#opening-title {
  position: absolute;
  font-family: "Metal Mania";
  text-transform: uppercase;
  font-size: 5rem;
  letter-spacing: 7px;
  color: rgb(223, 193, 138);
  text-shadow: 4px 4px rgba(81, 49, 49, 0.905);
  margin-top: 2%;
}

#start-container {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.btn-container {
  text-align: right;
  animation: shake 10s infinite;
  padding-top: 30%;
  flex-grow: 1;
  position: absolute;
  bottom: 0;
  right: 11rem;
  bottom: 4rem;
}
#game__start-btn {
  background-color: Transparent;
  border: none;
  width: fit-content;
  height: fit-content;
  cursor: pointer;
  outline: none;
  font-family: "Just Another Hand", cursive;
  font-size: 4rem;
  color: rgba(246, 255, 244, 0.905);
  text-shadow: 3px 3px rgba(124, 28, 28, 0.905);
  text-transform: uppercase;
  transform: rotate(-5deg);
  padding-right: 5%;
  transition: all 0.2s ease-in-out;
}
#game__start-btn:hover {
  color: rgba(246, 255, 244, 0.905);
  transform: scale(115%) rotate(-5deg);
}

#game__start-btn:active {
  transform: translate(0, 0.1rem) rotate(-5deg);
}

.left-sidebar,
.right-sidebar {
  color: white;
  text-align: center;
  height: 100%;
}

.game-left-panel,
.game-right-panel {
  height: 100%;
}

.sidebar-colors {
  background-color: rgba(64, 10, 64, 0.6);
  border: 4px solid #791a40;
}

.game-left-panel__title {
  margin-top: 2rem;
  font-size: 3.1rem;
}
.game-left-panel__items {
  width: 80%;
  background-color: rgba(59, 27, 102, 0.6);
  display: inline-block;
  height: 70%;
}

.main__game {
  color: white;
}

#game-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.operation__panel {
  text-align: center;
  background-color: transparent;
  padding-right: 15px;
  padding-left: 15px;
  font-size: 2rem;
  color: thistle;
  font-family: "Press Start 2P";
  margin-top: 20px;
}

.operation__question {
  font-size: 3rem;
}

.answer-input-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#answer {
  background-color: rgb(107,142,35, 0.2);
  text-align: center;
  width: 200px;
  height: 70px;
  font-size: 2rem;
  border: 6px groove thistle;
  color: thistle;
  font-family: "Press Start 2P";
}

#answer:focus {
  outline: 0 none;
}

#enter-answer-btn {
  width: 80px;
  margin-top: 15px;
  margin-bottom: 10px;
  background-color: thistle;
  border-radius: 1em;
  box-shadow: 2px 2px #888888;
  font-family: "Press Start 2P";
}


.monster-container {
  text-align: center;
  align-content: center;
}

.monster {
  margin-top: 1vh;
}

.game-right-panel {
  display: flex;
  flex-direction: column;
  text-align: left;
}

/* timer */

.game__timer {
  margin-top: 2rem;
  float: left;
  margin-left: 2%;
  font-size: 1rem;
  padding: 0 1rem;
  font-family: "Press Start 2P";
  background-color: #934842;
  align-items: center;
  animation: shake 0.5s;
  animation-iteration-count: 1;
  animation-play-state: running;
  animation-iteration-count: infinite;
  animation-play-state: paused;
  display: flex;
  width: 13rem;
  border: 4px solid #ff7f50;
}
.timer__title {
  font-size: 1rem;
  margin-right: 5%;
}

.timer-added-seconds {
  position: absolute;
  visibility: hidden;
  animation-name: addedSeconds;
  animation-duration: 2s;
  animation-timing-function: ease;
}
.timer-lost-seconds {
  position: absolute;
  visibility: hidden;
  animation-name: lostSeconds;
  animation-duration: 2s;
  animation-timing-function: ease;
}

.game__score {
  margin-top: 2rem;
  float: left;
  margin-left: 2%;
  font-family: "Press Start 2P";
  color: #fff;
  padding: 0 1rem;
  align-items: center;
  display: flex;
}

.score__title {
  font-size: 1rem;
  margin-right: 5%;
}

.score__label {
  font-size: 1rem;
}

.gameover____div {
  border: 2px solid rgb(254, 228, 197);
  border-radius: 20px;
  background: rgb(254, 228, 197);
  width: 400px;
  height: 400px;
  text-align: center;
  margin: 0 auto;
  margin-top: 35%;
}

.gameover____image {
  width: 80px;
  margin-top: 40px;
}

.gameover____button {
  background-color: rgb(249, 153, 0);
  border-radius: 20px;
  border: 10px solid rgb(249, 153, 0);
  cursor: pointer;
  color: white;
  font-weight: bold;
  box-shadow: 1px 1px 10px;
}

@keyframes addedSeconds {
  0% {
    color: green;
    visibility: visible;
    opacity: 1;
  }
  100% {
    color: green;
    transform: translate(20%, -600%);
    visibility: hidden;
    opacity: 0;
  }
}

@keyframes lostSeconds {
  0% {
    color: red;
    visibility: visible;
    opacity: 1;
  }
  100% {
    color: red;
    transform: translate(20%, 600%);
    visibility: hidden;
    opacity: 0;
  }
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

@media screen and (max-width: 670px) {
  #opening-title {
    font-size: 2.2rem;
  }
  .btn-container {
    padding-top: 65%;
  }
}

.hidden-element {
  display: none;
}

